# test-grpc-cmake

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  gt_client.cpp
proto/: gt.proto
src/: common.h  gt_client.cpp  gt_server.cpp
